cmake_minimum_required(VERSION 3.10)
project(xgraph-front C)
if((NOT DEFINED CMAKE_BUILD_TYPE) OR (CMAKE_BUILD_TYPE STREQUAL ""))
	set(CMAKE_BUILD_TYPE Release)
	set(CBT_ISDEF " (default)")
else()
	set(CBT_ISDEF "")
endif()
message("-- ${PROJECT_NAME}->CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}${CBT_ISDEF}")
add_subdirectory(xgraph/expr)
set(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG=1")
set(CMAKE_C_FLAGS_DEBUG "-Og -g -DNDEBUG=0 -fsanitize=address")
set(CMAKE_C_FLAGS_MINSIZEREL "-Os -DNDEBUG=1")
set(CMAKE_C_FLAGS_RELWITHDEBINFO "-Os -g -DNDEBUG=1")
add_compile_options(-Wall -Werror)
set(COMMON_SRCS "")
set(COMMON_LIBS expr m)
if(DEFINED LEAK)
	set(COMMON_SRCS ${COMMON_SRCS} xgraph/expr/leak.c)
endif()
if(DEFINED CMAKE_HOST_UNIX)
	add_subdirectory(xgraph/graph)
	execute_process(COMMAND sh -c "sh ${PROJECT_SOURCE_DIR}/systable.sh >${PROJECT_BINARY_DIR}/systable.c")
	include_directories(${PROJECT_BINARY_DIR})
	add_executable(wave wave.c ${COMMON_SRCS})
	target_link_libraries(wave ${COMMON_LIBS})
	add_library(common_symbols STATIC common_symbols.c)
	set(COMMON_LIBS common_symbols ${COMMON_LIBS})
	add_executable(draw main.c ${COMMON_SRCS})
	add_executable(list list.c ${COMMON_SRCS})
	target_link_libraries(draw graph ${COMMON_LIBS})
	target_link_libraries(list ${COMMON_LIBS})
	add_definitions(-DCOMMON_SYMBOLS)
endif()
add_executable(calc calc.c ${COMMON_SRCS})
target_link_libraries(calc expr ${COMMON_LIBS})
