cmake_minimum_required(VERSION 3.10)
project(xgraph-front C)
if((NOT DEFINED CMAKE_BUILD_TYPE) OR (CMAKE_BUILD_TYPE STREQUAL ""))
	set(CMAKE_BUILD_TYPE Release)
	set(CBT_ISDEF " (default)")
else()
	set(CBT_ISDEF "")
endif()
message("-- ${PROJECT_NAME}->CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}${CBT_ISDEF}")
add_subdirectory(xgraph/expr)
add_subdirectory(xgraph/graph)
set(CMAKE_C_FLAGS_RELEASE "-O3")
set(CMAKE_C_FLAGS_DEBUG "-Og -g -fsanitize=address")
set(CMAKE_C_FLAGS_MINSIZEREL "-Os")
set(CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -g -DNDEBUG=1")
add_compile_options(-Wall)
include_directories(xgraph/expr)
include_directories(xgraph/graph)
set(COMMON_SRCS "")
add_library(common_symbols STATIC common_symbols.c)
set(COMMON_LIBS expr m)
set(COMMON_LIBS common_symbols ${COMMON_LIBS})
if((DEFINED LEAK) AND (LEAK EQUAL 1))
	set(COMMON_SRCS xgraph/expr/leak.c ${COMMON_SRCS})
endif()
if(DEFINED CMAKE_HOST_UNIX)
	execute_process(COMMAND sh -c "sh ${PROJECT_SOURCE_DIR}/systable.sh >${PROJECT_BINARY_DIR}/systable.c")
	include_directories(${PROJECT_BINARY_DIR})
	add_executable(wave wave.c ${COMMON_SRCS})
	target_compile_definitions(wave PRIVATE -DTEXT_ENABLED)
	target_link_libraries(wave graph expr m)
	add_definitions(-DCOMMON_SYMBOLS)
endif()
add_executable(draw main.c ${COMMON_SRCS})
if(DEFINED CMAKE_HOST_UNIX)
	target_link_libraries(draw graph pthread ${COMMON_LIBS})
else()
	target_link_libraries(draw graph ${COMMON_LIBS})
endif()

add_executable(list list.c ${COMMON_SRCS})
target_link_libraries(list ${COMMON_LIBS})
add_executable(calc calc.c ${COMMON_SRCS})
target_link_libraries(calc ${COMMON_LIBS})
