cmake_minimum_required(VERSION 3.10)
project(xgraph-front C)
if((NOT DEFINED CMAKE_BUILD_TYPE) OR (CMAKE_BUILD_TYPE STREQUAL ""))
	set(CMAKE_BUILD_TYPE Release)
	set(CBT_ISDEF " (default)")
else()
	set(CBT_ISDEF "")
endif()
message("-- ${PROJECT_NAME}->CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}${CBT_ISDEF}")
add_subdirectory(xgraph/expr)
add_subdirectory(xgraph/graph)
set(CMAKE_C_FLAGS_RELEASE "-O3")
set(CMAKE_C_FLAGS_DEBUG "-O0 -g -fsanitize=address")
set(CMAKE_C_FLAGS_MINSIZEREL "-Os")
set(CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -g -DNDEBUG=1")
add_compile_options(-Wall)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
include_directories(xgraph/expr)
include_directories(xgraph/graph)
set(COMMON_SRCS "")
if((DEFINED USE_SHARED) AND (USE_SHARED EQUAL 1))
	set(LIBEXPR expr_shared)
	set(LIBGRAPH graph_shared)
	add_library(common_symbols SHARED common_symbols.c)
else()
	set(LIBEXPR expr)
	set(LIBGRAPH graph)
	add_library(common_symbols STATIC common_symbols.c)
endif()
set(COMMON_LIBS ${LIBEXPR} m)
set(COMMON_LIBS common_symbols ${COMMON_LIBS})
add_definitions(-DCOMMON_SYMBOLS)
if((DEFINED LEAK) AND (LEAK EQUAL 1))
	set(COMMON_SRCS xgraph/expr/leak.c ${COMMON_SRCS})
endif()
if(DEFINED CMAKE_HOST_UNIX)
	execute_process(COMMAND sh -c "sh ${PROJECT_SOURCE_DIR}/systable.sh >${PROJECT_BINARY_DIR}/systable.c")
	add_custom_target(expr_shared.so.conf ALL sh -c \"sh "${PROJECT_SOURCE_DIR}/xgraph/expr/lcdump" <"${PROJECT_SOURCE_DIR}/xgraph/expr/expr.h" >"${PROJECT_BINARY_DIR}/expr_shared.so.conf"\" BYPRODUCTS expr_shared.so.conf SOURCES xgraph/expr/expr.h)
	include_directories(${PROJECT_BINARY_DIR})
	add_executable(wave wave.c ${COMMON_SRCS})
	target_compile_definitions(wave PRIVATE -DTEXT_ENABLED)
	target_link_libraries(wave ${LIBGRAPH} ${LIBEXPR} m)
endif()
add_executable(draw main.c ${COMMON_SRCS})
if(DEFINED CMAKE_HOST_UNIX)
	target_link_libraries(draw ${LIBGRAPH} pthread ${COMMON_LIBS})
else()
	target_link_libraries(draw ${LIBGRAPH} ${COMMON_LIBS})
endif()

add_executable(list list.c ${COMMON_SRCS})
target_link_libraries(list ${COMMON_LIBS})
add_executable(calc calc.c ${COMMON_SRCS})
target_link_libraries(calc ${COMMON_LIBS})

file(COPY echo.calc ping.calc DESTINATION ${PROJECT_BINARY_DIR})
